# heavy_elephant

./: .gitignore  LICENSE  MASTER_PLAN.md  README.md  audit-arch.md  audit-chief.md  audit-security.md  ps4-portability-keys.md  ps4-save-auth-keys.md  ps4-trophy-hid-keys.md  pyproject.toml  requirements.txt  setup.py
docs/: M2_SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  context7-rust-crypto.md
he/: __init__.py  crypto.py  keys.py  utils.py
keys/: example_boot_chain.json  example_m2_keys.json  example_pkg_rsa.json  example_self_keys.json
reports/: orchestration-review.md  ps4-tools-spec.md  security-implementation.md  test-strategy.md
tests/: IMPLEMENTATION_SUMMARY.md  README_M2_TESTS.md  TEST_COVERAGE_M2.md  test_boot_decrypt.py  test_m2_security.py  test_m2_tool.py  test_pkg_tool.py  test_self_tool.py
tests/integration/: test_m2_integration.py
tools/: ps5_boot_decrypt.py  ps5_m2_tool.py  ps5_pkg_tool.py  ps5_self_tool.py
